<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/startAsyncText"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:text="@string/start" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:gravity="center"
                android:padding="10sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100sp"
                android:gravity="center"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</layout>
